tests/ui/let-else/let-else-missing-semicolon.stderr
error: expected `;`, found keyword `let`
  --> $DIR/let-else-missing-semicolon.rs:4:6
   |
LL |     }
   |      ^
LL |     let _ = "";
   |     --- unexpected token
   |
help: add `;` here
   |
LL |     };
   |      +

error: expected `;`, found `}`
  --> $DIR/let-else-missing-semicolon.rs:8:6
   |
LL |     }
   |      ^
LL | }
   | - unexpected token
   |
help: add `;` here
   |
LL |     };
   |      +

error: aborting due to 2 previous errors

